[package]
name = "screens"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/mason-larobina/screens"
readme = "README.md"
authors = ["Mason Larobina <mason.larobina@pm.me>"]
categories = ["command-line-utilities"]
description = "Generate JPEG contact-sheet previews (screenlists) for every video in a directory tree, mirroring the source layout."
license = "MIT"
keywords = ["ffmpeg", "video", "contact-sheet", "thumbnails", "screenlist"]

[dependencies]
image       = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ab_glyph    = "0.2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
walkdir     = "2"
rayon       = "1"
anyhow      = "1"
thiserror   = "2"
clap        = { version = "4", features = ["derive"] }
num-format  = "0.4"
log         = "0.4"
env_logger  = "0.11"
tempfile    = "3"
which       = "8"
humansize   = "2"
textwrap    = "0.16"
imageproc   = "0.25"

[profile.release]
opt-level = 3
